turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:33: error: ')' expected but 'if' found.
      if (rule(state)(currentColor)(1)==demiTour){
      ^